--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-*.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+target/
+.classpath
+.settings/
+.project
+.metadata
+ActiveMQ/
+FedoraRepository/
+indexes/
+ObjectStore/
+*/.cache
+*/.*.swp
+.*.swp
+.cache
