--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,21 @@
   <name>fcrepo-filesystem-modeshape-federation-connector</name>
   <description>Connects ModeShape to a filesystem directory, and monitors it for changes.</description>
   <properties>
-    <modeshape.version>3.3.0.Final</modeshape.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <modeshape.version>3.4.0.Final</modeshape.version>
+    <maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
+    <maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
+    <maven.assembly.plugin.version>2.2</maven.assembly.plugin.version>
+    <maven.install.plugin.version>2.3.1</maven.install.plugin.version>
+    <maven.jar.plugin.version>2.3.1</maven.jar.plugin.version>
+    <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
+    <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
+    <maven.resources.plugin.version>2.4.3</maven.resources.plugin.version>
   </properties>
-  <dependencyManagement>    
+  <dependencyManagement>
     <dependencies>
       <!-- Import the ModeShape BOM for embedded usage. This adds to the "dependenciesManagement" section
-                 defaults for all of the modules we might need, but we still have to include in the 
+                 defaults for all of the modules we might need, but we still have to include in the
                  "dependencies" section the modules we DO need. The benefit is that we don't have to
                  specify the versions of any of those modules.-->
       <dependency>
@@ -41,28 +50,95 @@
       <artifactId>modeshape-common</artifactId>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**</include>
+        </includes>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+    </resources>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
+      <!-- Specify the compiler options and settings -->
       <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven.compiler.plugin.version}</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <showDeprecation>false</showDeprecation>
+          <showWarnings>false</showWarnings>
+        </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <includes>
+            <include>**/*TestCase.java</include>
+            <include>**/*Test.java</include>
+          </includes>
+        </configuration>
       </plugin>
+      <!-- Produce source jars during the 'verify' phase -->
       <plugin>
-        <artifactId>maven-checkstyle-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>${maven.source.plugin.version}</version>
         <executions>
           <execution>
-            <id>checkstyle</id>
-            <phase>none</phase>
+            <id>attach-sources</id>
+            <phase>verify</phase>
             <goals>
-              <goal>check</goal>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!--
+				Build a test-jar for each project, so that src/test/* resources and
+				classes can be used in other projects. Also customize how the jar
+				files are assembled.
+			-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>${maven.jar.plugin.version}</version>
+        <executions>
+          <execution>
+            <id>test-jar</id>
+            <goals>
+              <goal>test-jar</goal>
             </goals>
           </execution>
         </executions>
