--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <description>Connects ModeShape to a filesystem directory, and monitors it for changes.</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <fcrepo-build-tools.version>1.3</fcrepo-build-tools.version>
     <modeshape.version>3.4.0.Final</modeshape.version>
     <maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
     <maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
@@ -20,6 +21,10 @@
     <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
     <maven.resources.plugin.version>2.4.3</maven.resources.plugin.version>
+    <!-- plugin versions -->
+    <!-- Until MCHECKSTYLE-169 is resolved, we're using our own, patched version
+      of checkstyle deployed to fcrepo.maven.org -->
+    <checkstyle.plugin.version>2.10-fcrepo</checkstyle.plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -85,6 +90,70 @@
             </includes>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>${checkstyle.plugin.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.fcrepo</groupId>
+              <artifactId>fcrepo-build-tools</artifactId>
+              <version>${fcrepo-build-tools.version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <consoleOutput>true</consoleOutput>
+            <configLocation>fcrepo-checkstyle/checkstyle.xml</configLocation>
+            <suppressionsLocation>fcrepo-checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
+          </configuration>
+          <executions>
+            <execution>
+              <id>checkstyle</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.mycila.maven-license-plugin</groupId>
+          <artifactId>maven-license-plugin</artifactId>
+          <version>1.10.b1</version>
+          <configuration>
+            <header>fcrepo-license/LICENSE_HEADER.txt</header>
+            <includes>
+              <include>**/src/main/java/**</include>
+              <include>**/src/test/java/**</include>
+            </includes>
+            <excludes>
+              <exclude>target/**</exclude>
+              <exclude>**/src/test/resources/**</exclude>
+              <exclude>**/src/main/resources/**</exclude>
+              <exclude>**/*.properties</exclude>
+            </excludes>
+            <properties>
+              <name>${project.artifactId}</name>
+              <year>${project.inceptionYear}</year>
+              <holder>${project.organization.name}</holder>
+            </properties>
+            <encoding>UTF-8</encoding>
+            <strictCheck>true</strictCheck>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.fcrepo</groupId>
+              <artifactId>fcrepo-build-tools</artifactId>
+              <version>${fcrepo-build-tools.version}</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -94,8 +163,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
           <showDeprecation>false</showDeprecation>
           <showWarnings>false</showWarnings>
         </configuration>
@@ -143,6 +212,10 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Checkstyles -->
+      <plugin>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
   <repositories>
@@ -151,4 +224,17 @@
       <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
     </repository>
   </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>fcrepo-thirdparty</id>
+      <name>Fcrepo Thirdparty Repository</name>
+      <url>http://maven.fcrepo.org/nexus/content/repositories/thirdparty/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
